Fix Stock price plot not appearing on smaller width monitors

--- a/UI/frontend/src/assets/styles/InvestStockPriceStyles.css
+++ b/UI/frontend/src/assets/styles/InvestStockPriceStyles.css
@@ -26,7 +26,7 @@
     margin-bottom: 20px;
 }
 
-@media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 800px) {
     .PlotComponent {
         display: none;
     }
@@ -35,5 +35,5 @@
 .PlotComponent {
     width: 50%;
     margin-top: 10px;
-    float: right;
+    float: left;
 }
